--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="ru">
+<html>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/img/icon-gender.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Яна Павлюц</title>
   </head>
   <body>
     <div id="root"></div>
